crates/textweaver-formats/tests/snapshots/fixtures__a_pandoc_docx_document.snap
---
source: crates/textweaver-formats/tests/fixtures.rs
expression: view(&doc)
---
{
  "markers": [
    {
      "kind": "heading",
      "level": 1,
      "range": [
        0,
        24
      ],
      "text": "Sample Markdown Document"
    },
    {
      "kind": "paragraph",
      "range": [
        26,
        37
      ],
      "text": "Test Author"
    },
    {
      "kind": "heading",
      "level": 1,
      "range": [
        39,
        63
      ],
      "text": "Sample Markdown Document"
    },
    {
      "kind": "paragraph",
      "range": [
        65,
        183
      ],
      "text": "This paragraph has bold text, italic text, inline code, and a link to the example site. Dr. Jones arrived at 3:30 p.m."
    },
    {
      "kind": "bold",
      "range": [
        84,
        93
      ],
      "text": "bold text"
    },
    {
      "kind": "italic",
      "range": [
        95,
        106
      ],
      "text": "italic text"
    },
    {
      "kind": "code",
      "range": [
        108,
        119
      ],
      "text": "inline code"
    },
    {
      "kind": "link",
      "range": [
        127,
        151
      ],
      "reference": "https://example.org",
      "text": "link to the example site"
    },
    {
      "kind": "heading",
      "level": 2,
      "range": [
        185,
        190
      ],
      "text": "Lists"
    },
    {
      "kind": "list",
      "level": 1,
      "range": [
        192,
        291
      ],
      "text": "First bullet item\nSecond bullet item with emphasis\nNested bullet under the second\nThird bullet item"
    },
    {
      "kind": "list_item",
      "level": 1,
      "range": [
        192,
        209
      ],
      "text": "First bullet item"
    },
    {
      "kind": "list_item",
      "level": 1,
      "range": [
        210,
        242
      ],
      "text": "Second bullet item with emphasis"
    },
    {
      "kind": "italic",
      "range": [
        234,
        242
      ],
      "text": "emphasis"
    },
    {
      "kind": "list",
      "level": 2,
      "range": [
        243,
        273
      ],
      "text": "Nested bullet under the second"
    },
    {
      "kind": "list_item",
      "level": 2,
      "range": [
        243,
        273
      ],
      "text": "Nested bullet under the second"
    },
    {
      "kind": "list_item",
      "level": 1,
      "range": [
        274,
        291
      ],
      "text": "Third bullet item"
    },
    {
      "kind": "list",
      "level": 1,
      "range": [
        293,
        353
      ],
      "text": "Step one of the procedure.\nStep two costs $5.25.\nStep three."
    },
    {
      "kind": "list_item",
      "label": "1.",
      "level": 1,
      "range": [
        293,
        319
      ],
      "text": "Step one of the procedure."
    },
    {
      "kind": "list_item",
      "label": "2.",
      "level": 1,
      "range": [
        320,
        341
      ],
      "text": "Step two costs $5.25."
    },
    {
      "kind": "list_item",
      "label": "3.",
      "level": 1,
      "range": [
        342,
        353
      ],
      "text": "Step three."
    },
    {
      "kind": "heading",
      "level": 2,
      "range": [
        355,
        362
      ],
      "text": "A Table"
    },
    {
      "kind": "table",
      "range": [
        364,
        425
      ],
      "text": "Name | Role | Score\nAda | Engineer | 98\nGrace | Admiral | 100"
    },
    {
      "kind": "table_row",
      "label": "header",
      "range": [
        364,
        383
      ],
      "text": "Name | Role | Score"
    },
    {
      "kind": "table_cell",
      "range": [
        364,
        368
      ],
      "text": "Name"
    },
    {
      "kind": "table_cell",
      "range": [
        371,
        375
      ],
      "text": "Role"
    },
    {
      "kind": "table_cell",
      "range": [
        378,
        383
      ],
      "text": "Score"
    },
    {
      "kind": "table_row",
      "range": [
        384,
        403
      ],
      "text": "Ada | Engineer | 98"
    },
    {
      "kind": "table_cell",
      "range": [
        384,
        387
      ],
      "text": "Ada"
    },
    {
      "kind": "table_cell",
      "range": [
        390,
        398
      ],
      "text": "Engineer"
    },
    {
      "kind": "table_cell",
      "range": [
        401,
        403
      ],
      "text": "98"
    },
    {
      "kind": "table_row",
      "range": [
        404,
        425
      ],
      "text": "Grace | Admiral | 100"
    },
    {
      "kind": "table_cell",
      "range": [
        404,
        409
      ],
      "text": "Grace"
    },
    {
      "kind": "table_cell",
      "range": [
        412,
        419
      ],
      "text": "Admiral"
    },
    {
      "kind": "table_cell",
      "range": [
        422,
        425
      ],
      "text": "100"
    },
    {
      "kind": "heading",
      "level": 2,
      "range": [
        427,
        442
      ],
      "text": "Quotes and Code"
    },
    {
      "kind": "paragraph",
      "range": [
        444,
        505
      ],
      "text": "A block quote spans a sentence. It has a second sentence too."
    },
    {
      "kind": "code",
      "level": 1,
      "range": [
        507,
        543
      ],
      "text": "fn main() {\n    println!(\"hello\");\n}"
    },
    {
      "kind": "table",
      "range": [
        545,
        578
      ],
      "text": "A diagram of the reading pipeline"
    },
    {
      "kind": "table_row",
      "range": [
        545,
        578
      ],
      "text": "A diagram of the reading pipeline"
    },
    {
      "kind": "table_cell",
      "range": [
        545,
        578
      ],
      "text": "A diagram of the reading pipeline"
    },
    {
      "kind": "paragraph",
      "range": [
        580,
        613
      ],
      "text": "A diagram of the reading pipeline"
    },
    {
      "kind": "heading",
      "level": 3,
      "range": [
        615,
        629
      ],
      "text": "Deeper Heading"
    },
    {
      "kind": "paragraph",
      "range": [
        631,
        699
      ],
      "text": "The final paragraph mentions a footnote.[1] It ends with a question?"
    },
    {
      "kind": "footnote",
      "range": [
        671,
        674
      ],
      "reference": "1",
      "text": "[1]"
    },
    {
      "kind": "heading",
      "level": 2,
      "range": [
        701,
        710
      ],
      "text": "Footnotes"
    },
    {
      "kind": "footnote",
      "level": 1,
      "range": [
        712,
        745
      ],
      "reference": "1",
      "text": "[1] The footnote text lives here."
    },
    {
      "kind": "footnote",
      "range": [
        712,
        715
      ],
      "reference": "1",
      "text": "[1]"
    }
  ],
  "meta": {
    "author": "Test AuthorTest Author",
    "format": "docx",
    "language": null,
    "path": null,
    "title": "Sample Markdown DocumentSample Markdown Document"
  },
  "text": "Sample Markdown Document\n\nTest Author\n\nSample Markdown Document\n\nThis paragraph has bold text, italic text, inline code, and a link to the example site. Dr. Jones arrived at 3:30 p.m.\n\nLists\n\nFirst bullet item\nSecond bullet item with emphasis\nNested bullet under the second\nThird bullet item\n\nStep one of the procedure.\nStep two costs $5.25.\nStep three.\n\nA Table\n\nName | Role | Score\nAda | Engineer | 98\nGrace | Admiral | 100\n\nQuotes and Code\n\nA block quote spans a sentence. It has a second sentence too.\n\nfn main() {\n    println!(\"hello\");\n}\n\nA diagram of the reading pipeline\n\nA diagram of the reading pipeline\n\nDeeper Heading\n\nThe final paragraph mentions a footnote.[1] It ends with a question?\n\nFootnotes\n\n[1] The footnote text lives here."
}
