crates/textweaver-formats/tests/snapshots/fixtures__a_sample_docx_document.snap
---
source: crates/textweaver-formats/tests/fixtures.rs
expression: view(&doc)
---
{
  "markers": [
    {
      "kind": "heading",
      "level": 1,
      "range": [
        0,
        20
      ],
      "text": "Sample Word Document"
    },
    {
      "kind": "heading",
      "level": 1,
      "range": [
        22,
        34
      ],
      "text": "Introduction"
    },
    {
      "kind": "paragraph",
      "range": [
        36,
        200
      ],
      "text": "This paragraph has bold text, italic text, underlined words, strong style, not bold, and a link to the example site. Dr. Jones arrived at 3:30 p.m.[1] It ends here."
    },
    {
      "kind": "bold",
      "range": [
        55,
        64
      ],
      "text": "bold text"
    },
    {
      "kind": "italic",
      "range": [
        66,
        77
      ],
      "text": "italic text"
    },
    {
      "kind": "underline",
      "range": [
        79,
        95
      ],
      "text": "underlined words"
    },
    {
      "kind": "bold",
      "range": [
        97,
        109
      ],
      "text": "strong style"
    },
    {
      "kind": "link",
      "range": [
        127,
        151
      ],
      "reference": "https://example.org",
      "text": "link to the example site"
    },
    {
      "kind": "footnote",
      "range": [
        183,
        186
      ],
      "reference": "1",
      "text": "[1]"
    },
    {
      "kind": "paragraph",
      "range": [
        202,
        274
      ],
      "text": "Tab separated\nsecond line with well-known words, inserted 7 and a field."
    },
    {
      "kind": "heading",
      "level": 1,
      "range": [
        276,
        281
      ],
      "text": "Lists"
    },
    {
      "kind": "list",
      "level": 1,
      "range": [
        283,
        382
      ],
      "text": "First bullet item\nSecond bullet item with emphasis\nNested bullet under the second\nThird bullet item"
    },
    {
      "kind": "list_item",
      "level": 1,
      "range": [
        283,
        300
      ],
      "text": "First bullet item"
    },
    {
      "kind": "list_item",
      "level": 1,
      "range": [
        301,
        333
      ],
      "text": "Second bullet item with emphasis"
    },
    {
      "kind": "italic",
      "range": [
        325,
        333
      ],
      "text": "emphasis"
    },
    {
      "kind": "list",
      "level": 2,
      "range": [
        334,
        364
      ],
      "text": "Nested bullet under the second"
    },
    {
      "kind": "list_item",
      "level": 2,
      "range": [
        334,
        364
      ],
      "text": "Nested bullet under the second"
    },
    {
      "kind": "list_item",
      "level": 1,
      "range": [
        365,
        382
      ],
      "text": "Third bullet item"
    },
    {
      "kind": "list",
      "level": 1,
      "range": [
        384,
        468
      ],
      "text": "Step one of the procedure.\nStep two costs $5.25.\nSub-step a.\nSub-step b.\nStep three."
    },
    {
      "kind": "list_item",
      "label": "1.",
      "level": 1,
      "range": [
        384,
        410
      ],
      "text": "Step one of the procedure."
    },
    {
      "kind": "list_item",
      "label": "2.",
      "level": 1,
      "range": [
        411,
        432
      ],
      "text": "Step two costs $5.25."
    },
    {
      "kind": "list",
      "level": 2,
      "range": [
        433,
        456
      ],
      "text": "Sub-step a.\nSub-step b."
    },
    {
      "kind": "list_item",
      "label": "2.a)",
      "level": 2,
      "range": [
        433,
        444
      ],
      "text": "Sub-step a."
    },
    {
      "kind": "list_item",
      "label": "2.b)",
      "level": 2,
      "range": [
        445,
        456
      ],
      "text": "Sub-step b."
    },
    {
      "kind": "list_item",
      "label": "3.",
      "level": 1,
      "range": [
        457,
        468
      ],
      "text": "Step three."
    },
    {
      "kind": "heading",
      "level": 2,
      "range": [
        470,
        477
      ],
      "text": "A Table"
    },
    {
      "kind": "table",
      "range": [
        479,
        546
      ],
      "text": "Name | Role | Score\nAda | Engineer and poet | 98\nGrace | Admiral | "
    },
    {
      "kind": "table_row",
      "label": "header",
      "range": [
        479,
        498
      ],
      "text": "Name | Role | Score"
    },
    {
      "kind": "table_cell",
      "range": [
        479,
        483
      ],
      "text": "Name"
    },
    {
      "kind": "table_cell",
      "range": [
        486,
        490
      ],
      "text": "Role"
    },
    {
      "kind": "table_cell",
      "range": [
        493,
        498
      ],
      "text": "Score"
    },
    {
      "kind": "table_row",
      "range": [
        499,
        527
      ],
      "text": "Ada | Engineer and poet | 98"
    },
    {
      "kind": "table_cell",
      "range": [
        499,
        502
      ],
      "text": "Ada"
    },
    {
      "kind": "table_cell",
      "range": [
        505,
        522
      ],
      "text": "Engineer and poet"
    },
    {
      "kind": "table_cell",
      "range": [
        525,
        527
      ],
      "text": "98"
    },
    {
      "kind": "table_row",
      "range": [
        528,
        546
      ],
      "text": "Grace | Admiral | "
    },
    {
      "kind": "table_cell",
      "range": [
        528,
        533
      ],
      "text": "Grace"
    },
    {
      "kind": "bold",
      "range": [
        528,
        533
      ],
      "text": "Grace"
    },
    {
      "kind": "table_cell",
      "range": [
        536,
        543
      ],
      "text": "Admiral"
    },
    {
      "kind": "table_cell",
      "range": [
        546,
        546
      ],
      "text": ""
    },
    {
      "kind": "paragraph",
      "range": [
        548,
        581
      ],
      "text": "A diagram of the reading pipeline"
    },
    {
      "kind": "image",
      "range": [
        548,
        581
      ],
      "text": "A diagram of the reading pipeline"
    },
    {
      "kind": "heading",
      "level": 2,
      "range": [
        583,
        598
      ],
      "text": "Outline Heading"
    },
    {
      "kind": "paragraph",
      "range": [
        600,
        625
      ],
      "text": "Inside a content control."
    },
    {
      "kind": "paragraph",
      "range": [
        627,
        699
      ],
      "text": "The final paragraph mentions an endnote.[2] Does it end with a question?"
    },
    {
      "kind": "footnote",
      "range": [
        667,
        670
      ],
      "reference": "2",
      "text": "[2]"
    },
    {
      "kind": "heading",
      "level": 2,
      "range": [
        701,
        710
      ],
      "text": "Footnotes"
    },
    {
      "kind": "footnote",
      "level": 1,
      "range": [
        712,
        745
      ],
      "reference": "1",
      "text": "[1] The footnote text lives here."
    },
    {
      "kind": "footnote",
      "range": [
        712,
        715
      ],
      "reference": "1",
      "text": "[1]"
    },
    {
      "kind": "footnote",
      "level": 1,
      "range": [
        746,
        777
      ],
      "reference": "2",
      "text": "[2] An endnote at the very end."
    },
    {
      "kind": "footnote",
      "range": [
        746,
        749
      ],
      "reference": "2",
      "text": "[2]"
    }
  ],
  "meta": {
    "author": "Test AuthorTest Author",
    "format": "docx",
    "language": "en-USen-US",
    "path": null,
    "properties": {
      "textweaver.revisions": "2"
    },
    "title": "Sample Word DocumentSample Word Document"
  },
  "text": "Sample Word Document\n\nIntroduction\n\nThis paragraph has bold text, italic text, underlined words, strong style, not bold, and a link to the example site. Dr. Jones arrived at 3:30 p.m.[1] It ends here.\n\nTab separated\nsecond line with well-known words, inserted 7 and a field.\n\nLists\n\nFirst bullet item\nSecond bullet item with emphasis\nNested bullet under the second\nThird bullet item\n\nStep one of the procedure.\nStep two costs $5.25.\nSub-step a.\nSub-step b.\nStep three.\n\nA Table\n\nName | Role | Score\nAda | Engineer and poet | 98\nGrace | Admiral | \n\nA diagram of the reading pipeline\n\nOutline Heading\n\nInside a content control.\n\nThe final paragraph mentions an endnote.[2] Does it end with a question?\n\nFootnotes\n\n[1] The footnote text lives here.\n[2] An endnote at the very end."
}
