crates/textweaver-formats/tests/snapshots/fixtures__a_sample_epub_document.snap
---
source: crates/textweaver-formats/tests/fixtures.rs
expression: view(&doc)
---
{
  "markers": [
    {
      "kind": "heading",
      "level": 1,
      "range": [
        0,
        16
      ],
      "text": "Sample EPUB Book"
    },
    {
      "kind": "paragraph",
      "range": [
        18,
        49
      ],
      "text": "By Ada Author and Grace Writer."
    },
    {
      "kind": "section_break",
      "label": "Chapter One: Beginnings",
      "level": 1,
      "range": [
        51,
        246
      ],
      "text": "Chapter One: Beginnings\n\nThe first chapter opens with bold words. Dr. Smith opened the library at 9:30 a.m. on Friday.1\n\nA Section Inside\n\nThis section is a nested entry in the table of contents."
    },
    {
      "kind": "heading",
      "level": 1,
      "range": [
        51,
        74
      ],
      "text": "Chapter One: Beginnings"
    },
    {
      "kind": "paragraph",
      "range": [
        76,
        170
      ],
      "text": "The first chapter opens with bold words. Dr. Smith opened the library at 9:30 a.m. on Friday.1"
    },
    {
      "kind": "italic",
      "range": [
        80,
        85
      ],
      "text": "first"
    },
    {
      "kind": "bold",
      "range": [
        105,
        115
      ],
      "text": "bold words"
    },
    {
      "kind": "link",
      "range": [
        169,
        170
      ],
      "reference": "#fn1",
      "text": "1"
    },
    {
      "kind": "section_break",
      "label": "A Section Inside",
      "level": 2,
      "range": [
        172,
        246
      ],
      "text": "A Section Inside\n\nThis section is a nested entry in the table of contents."
    },
    {
      "kind": "heading",
      "level": 2,
      "range": [
        172,
        188
      ],
      "text": "A Section Inside"
    },
    {
      "kind": "paragraph",
      "range": [
        190,
        246
      ],
      "text": "This section is a nested entry in the table of contents."
    },
    {
      "kind": "section_break",
      "label": "Chapter Two: Tables and Lists",
      "level": 1,
      "range": [
        248,
        403
      ],
      "text": "Chapter Two: Tables and Lists\n\nA map of the old town\n\nThe café serves crème brûlée.\n\nOpening hours\n\nDay | Hours\nMonday | 9 to 5\n\nArrive early.\nFind a seat."
    },
    {
      "kind": "heading",
      "level": 1,
      "range": [
        248,
        277
      ],
      "text": "Chapter Two: Tables and Lists"
    },
    {
      "kind": "paragraph",
      "range": [
        279,
        300
      ],
      "text": "A map of the old town"
    },
    {
      "kind": "image",
      "range": [
        279,
        300
      ],
      "reference": "../images/map.png",
      "text": "A map of the old town"
    },
    {
      "kind": "paragraph",
      "range": [
        302,
        331
      ],
      "text": "The café serves crème brûlée."
    },
    {
      "kind": "table",
      "label": "Opening hours",
      "range": [
        348,
        375
      ],
      "text": "Day | Hours\nMonday | 9 to 5"
    },
    {
      "kind": "table_row",
      "label": "header",
      "range": [
        348,
        359
      ],
      "text": "Day | Hours"
    },
    {
      "kind": "table_cell",
      "range": [
        348,
        351
      ],
      "text": "Day"
    },
    {
      "kind": "table_cell",
      "range": [
        354,
        359
      ],
      "text": "Hours"
    },
    {
      "kind": "table_row",
      "range": [
        360,
        375
      ],
      "text": "Monday | 9 to 5"
    },
    {
      "kind": "table_cell",
      "range": [
        360,
        366
      ],
      "text": "Monday"
    },
    {
      "kind": "table_cell",
      "range": [
        369,
        375
      ],
      "text": "9 to 5"
    },
    {
      "kind": "list",
      "level": 1,
      "range": [
        377,
        403
      ],
      "text": "Arrive early.\nFind a seat."
    },
    {
      "kind": "list_item",
      "label": "1.",
      "level": 1,
      "range": [
        377,
        390
      ],
      "text": "Arrive early."
    },
    {
      "kind": "list_item",
      "label": "2.",
      "level": 1,
      "range": [
        391,
        403
      ],
      "text": "Find a seat."
    }
  ],
  "meta": {
    "author": "Ada Author, Grace Writer",
    "format": "epub",
    "language": "en",
    "path": null,
    "title": "Sample EPUB Book"
  },
  "text": "Sample EPUB Book\n\nBy Ada Author and Grace Writer.\n\nChapter One: Beginnings\n\nThe first chapter opens with bold words. Dr. Smith opened the library at 9:30 a.m. on Friday.1\n\nA Section Inside\n\nThis section is a nested entry in the table of contents.\n\nChapter Two: Tables and Lists\n\nA map of the old town\n\nThe café serves crème brûlée.\n\nOpening hours\n\nDay | Hours\nMonday | 9 to 5\n\nArrive early.\nFind a seat."
}
